[tool.poetry]
name = "movees"
version = "0.3.2"
description = "A database of movies with cli."
authors = ["mkalitka <mikolaj.kalitka@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
peewee = "^3.17.0"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"

[tool.poetry.scripts]
movees = "movees.__main__:main"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

